--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ bleach==3.1.4
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
-https://github.com/machow/hoof/archive/wrestlr-compat.zip
+git+git://github.com/machow/hoof.git@wrestlr-compat#egg=hoof
 importlib-metadata==1.6.0
 ipykernel==5.2.1
 ipython==7.13.0
@@ -54,7 +54,7 @@ pyzmq==19.0.0
 qtconsole==4.7.3
 QtPy==1.9.0
 Send2Trash==1.5.0
-https://github.com/machow/siuba/archive/feat-wrestlr-compat.zip
+git+git://github.com/machow/siuba.git@feat-wrestlr-compat#egg=siuba
 six==1.14.0
 SQLAlchemy==1.3.16
 terminado==0.8.3
