--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 antlr-ast==0.2.1
 antlr4-python3-runtime==4.7.2
+appdirs==1.4.3
 appnope==0.1.0
 atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
+beautifulsoup4==4.9.0
+black==19.10b0
 bleach==3.1.4
+click==7.1.1
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+descartes==1.1.0
 entrypoints==0.3
 git+git://github.com/machow/hoof.git@wrestlr-compat#egg=hoof
 importlib-metadata==1.6.0
@@ -26,25 +32,33 @@ jupyter-core==4.6.3
 jupyter-highlight-selected-word==0.2.0
 jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
+kiwisolver==1.2.0
 lxml==4.5.0
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mistune==0.8.4
+mizani==0.6.0
 more-itertools==8.2.0
 nbconvert==5.6.1
 nbformat==5.0.5
 notebook==6.0.3
 numpy==1.18.2
+palettable==3.3.0
 pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.7.0
+pathspec==0.8.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
+plotnine==0.6.0
 pluggy==0.13.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 py==1.8.1
 Pygments==2.6.1
+pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==3.8.2
 python-dateutil==2.8.1
@@ -53,16 +67,22 @@ PyYAML==5.3.1
 pyzmq==19.0.0
 qtconsole==4.7.3
 QtPy==1.9.0
+regex==2020.4.4
+scipy==1.4.1
 Send2Trash==1.5.0
 git+git://github.com/machow/siuba.git@feat-wrestlr-compat#egg=siuba
 six==1.14.0
+soupsieve==2.0
 SQLAlchemy==1.3.16
+statsmodels==0.11.1
 terminado==0.8.3
 testpath==0.4.4
+toml==0.10.0
 tornado==6.0.4
 traitlets==4.3.3
+typed-ast==1.4.1
 wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wrestlr==0.0.1
 zipp==3.1.0
-
